P2/bloco2/b2_02/SuffixCalculator.g4
grammar SuffixCalculator;
program:
    stat * EOF;     //zero or more repetitions of stat
stat:
    expr ? NEWLINE;     //operative EXPR followed by a NEWLINE
expr:
    expr expr op = ('*' | '/' | '+' | '-')  #ExprSuffix
    | Number                                #ExprNumber
    ;
Number: [0-9]+('.'[0-9]+)?;
NEWLINE: '\r'? '\n';
WS: [ \t]+ -> skip;
